# differential-datalog

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  build_distro.sh  test.sh
app/: Main.hs
doc/tutorial/: tutorial.md
java/: ddlogapi.c
java/ddlogapi/: DDlogAPI.java
java/test_flatbuf1/: Test.java  flatbufTest.dl  query.dump.expected  run.sh
lib/: allocate.rs  ddlog_std.dl  ddlog_std.rs  debug.rs  fp.rs  graph.rs  intern.rs  internment.rs  json.rs  ovsdb.rs  range_mapper.dl  range_mapper.rs  range_mapper.toml  std.dl  std.rs  tinyset.rs  url.rs  uuid.rs
lib/net/: ipv4.rs  ipv6.rs
rust/ddlog_benches/: Cargo.toml  Makefile.toml  README.md
rust/ddlog_benches/src/: lib.rs
rust/template/: Cargo.toml  ddlog.h
rust/template/cmd_parser/: parse.rs
rust/template/differential_datalog/: Cargo.toml  ddlog.rs  ddval.rs  debug.rs  debug_log.rs  lib.rs  program.rs  record.rs  replay.rs  test.rs  test_value.rs
rust/template/differential_datalog/src/program/: mod.rs  worker.rs
rust/template/differential_datalog_test/: Cargo.toml  lib.rs  test_value.rs
rust/template/ovsdb/: lib.rs
rust/template/src/: api.rs  debug.rs  flatbuf.rs  lib.rs  main.rs
rust/template/strong_arc/: Cargo.toml  lib.rs
rust/template/types/: Cargo.toml  flatbuf.rs  int.rs  lib.rs  module.rs  uint.rs
rust/template/value/: Cargo.toml  lib.rs
src/Language/DifferentialDatalog/: Attribute.hs  Compile.hs  Compile.hs-boot  DatalogProgram.hs  Debug.hs  ECtx.hs  Expr.hs  Expr.hs-boot  FlatBuffer.hs  Index.hs  Module.hs  NS.hs  Optimize.hs  Parse.hs  Rule.hs  Rule.hs-boot  Statement.hs  Syntax.hs  Type.hs  Type.hs-boot  Validate.hs
test/: Spec.hs  test-ovn.sh
test/datalog_tests/: dcm1.dl  inspect_log.rs  json_test.dl  lib_test.debug.ast.expected  lib_test.dl  modules.ast.expected  ovn.rs  range_mapper_test.dl  range_mapper_test.dump.expected  redist.ast.expected  redist.dl  redist_opt.ast.expected  redist_opt.dl  run-test.sh  simple.ast.expected  simple.debug.ast.expected  simple.dl  simple2.debug.ast.expected  test-libs.sh  time_test.dump.expected
(+1 files in other folders)
