[package]
name = "value"
version = "0.1.0"
edition = "2018"
autobins = false

[dependencies.differential_datalog]
path = "../differential_datalog"

[dependencies.types]
path = "../types"

[dependencies]
abomonation = "0.7"
#differential-dataflow = "0.11.0"
#differential-dataflow = { git = "https://github.com/frankmcsherry/differential-dataflow"}
differential-dataflow = { git = "https://github.com/TimelyDataflow/differential-dataflow" }
fnv = "1.0.2"
lazy_static = "1.3"
libc = "0.2"
num-traits = "0.2"
serde = {version = "1.0", features = ["derive"]}
#timely = "0.11"
timely = { git = "https://github.com/TimelyDataflow/timely-dataflow" }
twox-hash = "1.1"
typetag = "0.1"

# FlatBuffers dependency enabled by the `flatbuf` feature.
# flatbuffers crate version must be in sync with the flatc compiler and Java
# libraries: flatbuffers "0.6" <-> FlatBuffers "1.11.0".
flatbuffers = {version = "0.6", optional = true}

[features]
default = []
flatbuf = ["flatbuffers", "differential_datalog/flatbuf", "types/flatbuf"]

[lib]
name = "value"
path = "lib.rs"
